WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
308068
Fix serializations of scroll-timeline/view-timeline shorthand computed values
https://bugs.webkit.org/show_bug.cgi?id=308068
Summary
Fix serializations of scroll-timeline/view-timeline shorthand computed values
Sam Weinig
Reported
2026-02-17 11:36:47 PST
To ensure only roundtrip-able values are serialized, the serializations of the scroll-timeline/view-timeline shorthand computed values need to return the empty string when: - The coordinated value list has more than one entry - There is at least one coordinated value that does not have all its properties "set". We should probably also do this for the other coordinated value list shorthands (background, mask, animation, transition), but starting small. (this is based on the discussion in
https://github.com/w3c/csswg-drafts/issues/13500
).
Attachments
Add attachment
proposed patch, testcase, etc.
Sam Weinig
Comment 1
2026-02-17 16:06:04 PST
Pull request:
https://github.com/WebKit/WebKit/pull/58882
EWS
Comment 2
2026-02-18 14:08:52 PST
Committed
307783@main
(205c87dbf7f2): <
https://commits.webkit.org/307783@main
> Reviewed commits have been landed. Closing PR #58882 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2026-02-18 14:09:13 PST
<
rdar://problem/170667195
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug