Fix serializations of scroll-timeline/view-timeline shorthand computed values https://bugs.webkit.org/show_bug.cgi?id=308068

Reviewed by Darin Adler.

Per discussion in https://github.com/w3c/csswg-drafts/issues/13500, the empty
string is the correct serialization for coordinated list property shorthands that:

  - have more than one item
  - have at least one longhand that doesn't set a value for every item

This implements that rule for scroll-timeline/view-timeline, which makes us
match Firefox and Chrome. The remaining coordinated list properties will be
worked on separately.

* LayoutTests/imported/w3c/web-platform-tests/scroll-animations/css/scroll-timeline-shorthand-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/scroll-animations/css/scroll-timeline-shorthand.html:
* LayoutTests/imported/w3c/web-platform-tests/scroll-animations/css/view-timeline-shorthand-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/scroll-animations/css/view-timeline-shorthand.html:
* Source/WebCore/css/ShorthandSerializer.cpp:
* Source/WebCore/style/StyleExtractorCustom.h:
* Source/WebCore/style/values/primitives/StyleCoordinatedValueListValue.h:

Canonical link: https://commits.webkit.org/307783@main